CSS fixes. Changed post title line height, changed post width to 100% on small screen.

--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -36,7 +36,7 @@ header > nav {
 }
 .page-content {
     flex: 1 0 auto;
-    margin: 0 auto;
+    margin: 1em auto;
     max-width: 70%;
 
     @include media-query($on-palm){
@@ -45,7 +45,6 @@ header > nav {
 }
 .site-header {
     border-bottom: 1px solid #EDEDED;
-    margin-bottom: 1em;
 }
 footer {
     font-size: $small-font-size;
@@ -326,6 +325,7 @@ input[type=submit]:hover {
  */
 .post-list {
     list-style: none;
+    line-height: 1.3;
 }
 .post-meta {
     font-size: $small-font-size;
@@ -352,6 +352,11 @@ input[type=submit]:hover {
     text-align: left;
     margin: 0 auto;
     margin-bottom: $spacing-unit;
+
+    @include media-query($on-laptop) {
+        margin-left: 10px;
+        width: 100%;
+    }
 
     h1 {
         font-size: 42px;
